@@ -1,5 +1,10 @@
 2007-08-17  Torsten Rahn  <rahn@kde.org>
 
+    * src/lib/measuretool.{cpp,h}
+    Renaming to MeasureTool.{cpp,h}
+
+2007-08-17  Torsten Rahn  <rahn@kde.org>
+
     * src/lib/MarbleDirs.cpp:
     Rearranging the code to be more in line with the
     description in MarbleDirs.h.
